--- a/components/nilan/nilan.yaml
+++ b/components/nilan/nilan.yaml
@@ -1,3 +1,7 @@
+external_components:
+  - source: github://Skappari1/esphome_components@main
+    refresh: 0s
+
 uart:
   id: mod_bus
   tx_pin: GPIO17
@@ -15,3 +19,5 @@ modbus_controller:
     address: 1   ## address of the Modbus slave device on the bus
     modbus_id: modbus1
     update_interval: 10s
+
+nilan:
