--- a/components/nilan/nilan.yaml
+++ b/components/nilan/nilan.yaml
@@ -25,41 +25,21 @@ nilan:
 select:
   - platform: modbus_controller
     modbus_controller_id: nilan_modbus_controller
-    name: "Set user function"
+    name: "Etäkäyttökytkin"
     id: nilan_set_user_function
     address: 601
     force_new_range: true
     use_write_multiple: true
     value_type: U_WORD
     optionsmap:
-      "None" : 0
-      "Extend" : 1
-      "Inlet" : 2
-      "Exhaust" : 3
-      "External heater offset" : 4
-      "Ventilate" : 5
-      "Cooker Hood" : 6
-
-  - platform: modbus_controller
-    modbus_controller_id: nilan_modbus_controller
-    name: "Set user function 2"
-    id: nilan_set_user_function2
-    address: 611
-    force_new_range: true
-    use_write_multiple: true
-    value_type: U_WORD
-    optionsmap:
-      "None" : 0
-      "Extend" : 1
-      "Inlet" : 2
-      "Exhaust" : 3
-      "External heater offset" : 4
-      "Ventilate" : 5
-      "Cooker Hood" : 6
+      "Off" : 0
+      "Tulopuhallin" : 2
+      "Poistopuhallin" : 3
+      "Molemmat" : 5
       
   - platform: modbus_controller
     modbus_controller_id: nilan_modbus_controller
-    name: "Set operation mode"
+    name: "Mode"
     id: nilan_set_operation_mode
     address: 1002
     force_new_range: true
@@ -67,8 +47,8 @@ select:
     value_type: U_WORD
     optionsmap:
       "Off" : 0
-      "Heat" : 1
-      "Cool" : 2
+      "Lämmitys" : 1
+      "Jäähdytys" : 2
       "Auto" : 3
 
 
