--- a/components/nilan/nilan.yaml
+++ b/components/nilan/nilan.yaml
@@ -68,33 +68,33 @@ sensor:
 
   - platform: modbus_controller
     modbus_controller_id: nilan_modbus_controller
-    name: "Exhaust temperature"
-    id: nilan_exhaust_temp_t3
+    name: "Raitisilma"
+    id: nilan_fresh_air_temp_t1
     unit_of_measurement: °C
     accuracy_decimals: 1
     device_class: temperature
     register_type: read
     value_type: S_WORD
-    address: 203
-    filters:
-      - multiply: 0.01
-      
-  - platform: modbus_controller
-    modbus_controller_id: nilan_modbus_controller
-    name: "Outlet temperature"
-    id: nilan_outlet_temp_t4
-    unit_of_measurement: °C
-    accuracy_decimals: 1
-    device_class: temperature
-    register_type: read
-    value_type: S_WORD
-    address: 204
+    address: 201
     filters:
       - multiply: 0.01
 
   - platform: modbus_controller
     modbus_controller_id: nilan_modbus_controller
-    name: "Inlet (after heater) temperature"
+    name: "Höyrystin"
+    id: nilan_condenser_temp_t5
+    unit_of_measurement: °C
+    accuracy_decimals: 1
+    device_class: temperature
+    register_type: read
+    value_type: S_WORD
+    address: 205
+    filters:
+      - multiply: 0.01
+
+  - platform: modbus_controller
+    modbus_controller_id: nilan_modbus_controller
+    name: "Tuloilma"
     id: nilan_inlet_temp_t7
     unit_of_measurement: °C
     accuracy_decimals: 1
@@ -102,19 +102,6 @@ sensor:
     register_type: read
     value_type: S_WORD
     address: 207
-    filters:
-      - multiply: 0.01
-
-  - platform: modbus_controller
-    modbus_controller_id: nilan_modbus_controller
-    name: "Outdoor temperature"
-    id: nilan_outdoor_temp_t8
-    unit_of_measurement: °C
-    accuracy_decimals: 1
-    device_class: temperature
-    register_type: read
-    value_type: S_WORD
-    address: 208
     filters:
       - multiply: 0.01
 
