--- a/components/nilan/nilan.yaml
+++ b/components/nilan/nilan.yaml
@@ -305,23 +305,12 @@ sensor:
     address: 1104    
 
 #  - platform: template
-#    name: "Heat exchange efficiency"
-#    id: nilan_heat_exchange_efficiency
+#    name: "Tuloilman hyötysuhde"
+#    id: nilan_heat_exchange1_efficiency
 #    unit_of_measurement: '%'
 #    accuracy_decimals: 1
 #    lambda: !lambda |-
-#      return (id(nilan_inlet_temp_t7).state-id(nilan_fresh_air_temp_t1).state)/(id(nilan_condenser_temp_t5).state-id(nilan_fresh_air_temp_t1).state)*100.0;
-
-  # - platform: modbus_controller
-  #   modbus_controller_id: nilan_modbus_controller
-  #   name: "Heat exchange efficiency"
-  #   id: nilan_heat_exchange_efficiency
-  #   unit_of_measurement: '%'
-  #   accuracy_decimals: 1
-  #   register_type: read
-  #   address: 1204
-  #   filters:
-  #     - multiply: 0.01
+#      return (id(nilan_inlet_temp_t7).state+id(nilan_fresh_air_temp_t1).state)/(id(nilan_condenser_temp_t5).state-id(nilan_fresh_air_temp_t1).state)*100.0;
       
 ###########################
 #### HOLDING REGISTERS ####
