--- a/components/nilan/nilan.yaml
+++ b/components/nilan/nilan.yaml
@@ -81,8 +81,8 @@ sensor:
 
   - platform: modbus_controller
     modbus_controller_id: nilan_modbus_controller
-    name: "Höyrystin"
-    id: nilan_condenser_temp_t5
+    name: "Lauhdutin"
+    id: nilan_evaporator_temp_t5
     unit_of_measurement: °C
     accuracy_decimals: 1
     device_class: temperature
@@ -94,8 +94,8 @@ sensor:
 
   - platform: modbus_controller
     modbus_controller_id: nilan_modbus_controller
-    name: "Lauhdutin"
-    id: nilan_evaporator_temp_t6
+    name: "Höyrystin"
+    id: nilan_condenser_temp_t6
     unit_of_measurement: °C
     accuracy_decimals: 1
     device_class: temperature
@@ -304,13 +304,13 @@ sensor:
     register_type: read
     address: 1104    
 
-#  - platform: template
-#    name: "Tuloilman hyötysuhde"
-#    id: nilan_heat_exchange1_efficiency
-#    unit_of_measurement: '%'
-#    accuracy_decimals: 1
-#    lambda: !lambda |-
-#      return (id(nilan_inlet_temp_t7).state+id(nilan_fresh_air_temp_t1).state)/(id(nilan_condenser_temp_t5).state-id(nilan_fresh_air_temp_t1).state)*100.0;
+  - platform: template
+    name: "Tuloilman hyötysuhde"
+    id: nilan_heat_exchange1_efficiency
+    unit_of_measurement: '%'
+    accuracy_decimals: 1
+    lambda: !lambda |-
+      return (id(nilan_inlet_temp_t7).state+id(nilan_fresh_air_temp_t1).state)/(id(nilan_exhaust_temp_t10).state-id(nilan_fresh_air_temp_t1).state)*100.0;
       
 ###########################
 #### HOLDING REGISTERS ####
