--- a/components/nilan/nilan.yaml
+++ b/components/nilan/nilan.yaml
@@ -21,7 +21,7 @@ modbus_controller:
     update_interval: 10s
 
 climate:
-  - platform:
+  - platform: thermostat
     name: Nilan
     current_temp_sensor_id: nilan_exhaust_temp_t10
     target_temp_sensor_id: nilan_target_temperature_set
