--- a/components/nilan/nilan.yaml
+++ b/components/nilan/nilan.yaml
@@ -20,8 +20,10 @@ modbus_controller:
     modbus_id: modbus1
     update_interval: 10s
 
+nilan:
+
 climate:
-  - platform: thermostat
+  - platform: nilan
     name: Nilan
     current_temp_sensor_id: nilan_exhaust_temp_t10
     target_temp_sensor_id: nilan_target_temperature_set
