--- a/components/nilan/nilan.yaml
+++ b/components/nilan/nilan.yaml
@@ -551,6 +551,30 @@ number:
     use_write_multiple: true
     multiply: 100
 
+  - platform: modbus_controller
+    modbus_controller_id: nilan_modbus_controller
+    name: "Vesi ylä"
+    id: nilan_target_temperature_set
+    min_value: 4
+    max_value: 75
+    step: 1.0
+    address: 1700
+    force_new_range: true
+    use_write_multiple: true
+    multiply: 100
+
+  - platform: modbus_controller
+    modbus_controller_id: nilan_modbus_controller
+    name: "Vesi ala"
+    id: nilan_target_temperature_set
+    min_value: 4
+    max_value: 65
+    step: 1.0
+    address: 1701
+    force_new_range: true
+    use_write_multiple: true
+    multiply: 100
+
 switch:
   - platform: modbus_controller
     modbus_controller_id: nilan_modbus_controller
